--- a/engine/templates/summarization.html
+++ b/engine/templates/summarization.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Automatic Summarization</h1>
-<form action="{{ url_for('summarization_response') }}" method="post">
+    <h1>Automatic Extractive Summarization</h1>
+    <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.input_text.label }}<br>
-            {{ form.input_text(cols = 180, rows = 25) }}<br>
-       </p>
-       <p>{{ form.submit() }}</p>
+        {{ form.input_text.label }}<br>
+        {{ form.input_text(cols = 180, rows = 25) }}<br>
+        {% for error in form.input_text.errors %}
+            <span style="color: red;">[Please select an option]</span><br>
+        {% endfor %}
+        {{ form.submit() }}
     </form>
 {% endblock %}
