--- a/engine/templates/summarization.html
+++ b/engine/templates/summarization.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Automatic Extractive Summarization</h1>
+    <p>In this page, you can input some text that you want to summarize. By using some Natural Language Processing techniques, it will give you back a 5-sentence extractive summary containing the most important sentences of your text!</p>
     <form action="" method="post">
         {{ form.hidden_tag() }}
-        {{ form.input_text.label }}<br>
-        {{ form.input_text(cols = 180, rows = 25) }}<br>
+        <b>{{ form.input_text.label }}</b><br>
+        {{ form.input_text(cols = 180, rows = 20) }}<br>
         {% for error in form.input_text.errors %}
             <span style="color: red;">[Please select an option]</span><br>
         {% endfor %}
