--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -9,7 +9,8 @@
     <body>
         <div>
             auto_summ: 
-            <a href="{{ url_for('summarization') }}">Automatic Summarization</a>
+            <a href="{{ url_for('summarization') }}">Automatic Extractive Summarization</a>
+            <a href="{{ url_for('about_me') }}">About the author</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
