--- a/engine/templates/response.html
+++ b/engine/templates/response.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Your Extractive Summary</h1>
-    <h2>Here are the most important sentences of your text</h2>
+    <h2>Here are the most important sentences of your text, sorted by importance</h2>
     <p>
     {% for line in body %}
         <b>{{ line.rank }}.   </b>{{ line.sentence }}<br>
