--- a/engine/templates/response.html
+++ b/engine/templates/response.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Your Extractive Summary</h1>
-    <h2>Here are the most important sentences of your text, sorted by importance</h2>
+    <h2>Here are the sentences of your text, sorted by centrality</h2>
     <p>
     {% for line in body %}
-        <b>{{ line.rank }}.   </b>{{ line.sentence }}<br>
+        <b>{{ line.centrality }}.   </b> {{ line.sentence }}<br>
     {% endfor %}
     </p>
     <hr>
