--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -10,7 +10,7 @@
         <div>
             auto_summ: 
             <a href="{{ url_for('summarization') }}">Automatic Extractive Summarization</a>
-            <a href="{{ url_for('about_me') }}">About the author</a>
+            <a href="https://web.cs.dal.ca/~juanr/">About the author</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
