--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
+<title>Unsupervised document summarization</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
         {% if title %}
         <title>{{ title }} - auto_summ</title>
@@ -6,10 +10,10 @@
         <title>Welcome to auto_summ</title>
         {% endif %}
     </head>
-    <body>
+    <body style="font-family: Helvetica;">
         <div>
-            auto_summ: 
-            <a href="{{ url_for('summarization') }}">Automatic Extractive Summarization</a>
+            <a href="{{ url_for('index') }}">Home</a> |
+            <a href="{{ url_for('summarization') }}">Summarization</a> |
             <a href="https://web.cs.dal.ca/~juanr/">About the author</a>
         </div>
         <hr>
