--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
-<title>Unsupervised document summarization</title>
+<title>Unsupervised Document Summarization</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <head>
-        {% if title %}
-        <title>{{ title }} - auto_summ</title>
-        {% else %}
         <title>Welcome to auto_summ</title>
-        {% endif %}
     </head>
 	<body class="w3-auto w3-container">
         <div>
