--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
-<title>Unsupervised Document Summarization</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <head>
-        <title>Welcome to auto_summ</title>
+	{% if title %}
+	    <title>auto_summ - {{ title }}</title>
+        {% else %}
+            <title>auto_summ</title>
+        {% endif %}
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-	<body class="w3-auto w3-container">
+    <body class="w3-auto w3-container">
         <div>
             <a href="{{ url_for('index') }}">Home</a> |
             <a href="{{ url_for('summarization') }}">Summarization</a> |
